applications/rabbitmq-broker/env/local/stateful-set-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq-broker-stateful-set
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: rabbitmq
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
  volumeClaimTemplates:
    - metadata:
        name: rabbitmq-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 500Mi
