applications/rabbitmq-broker/env/local/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: quizmeup
  name: rabbitmq-broker-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: rabbitmq.quizmeup.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq-broker-service
                port:
                  number: 15672
